Fixed missing scrollbar in the Version History widget (#2546)

--- a/src/main/resources/assets/styles/view/context/widget-version.less
+++ b/src/main/resources/assets/styles/view/context/widget-version.less
@@ -2,7 +2,6 @@
   box-sizing: border-box;
   width: 100%;
   height: 100%;
-  overflow: hidden;
 
   .status {
     color: @admin-white;
